<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="addnewimage">Add a new image:</string>
    <string name="app_name">Gizur Survey</string>
    <string name="title_activity_login">Gizur Survey</string>
    <string name="login_textview">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login">Login</string>
    <string name="title_activity_homepage">Home Page</string>
    <string name="homepage_textview_survey">Survey</string>
    <string name="homepage_textview_ID">Trailer ID:</string>
    <string name="homepage_textview_trailertype">Trailer Type:</string>
    <string name="homepage_textview_place">Place:</string>
    <string name="homepage_textview_sealed">Sealed:</string>
    <string name="homepage_textview_trailerinventory">Trailer Inventory</string>
    <string name="trailer_type_dialog_title">Select type of trailer:</string>
    <string name="trailer_type_own">Own</string>
    <string name="trailer_type_rented">Rented</string>
    <string name="toast_no_list_item_selected">Please select an item from the list</string>
    <string name="id_dialog_title">Select ID:</string>
    <string name="sealed_yes">Yes</string>
    <string name="sealed_no">No</string>
    <string name="homepage_textview_plates">Plates:</string>
    <string name="homepage_textview_straps">Straps:</string>
    <string name="report_new_damage_textview_damagedetails">Damage Details</string>
    <string name="reportnewdamage_textview_type">Type:</string>
    <string name="reportnewdamage_textview_position">Position:</string>
    <string name="reportnewdamage_select_type">Select type:</string>
    <string name="reportnewdamage_select_position">Select position:</string>
    <string name="report_new_damage_textview_damageimages">Damage Images</string>
    <string name="reportnewdamage_button_addnewimage">Add a new image</string>
    <string name="listimage_adapter_description">Image that describes the damage</string>
    <string name="reportnewdamage_button_done">Done</string>
    <string name="damaged_full_image">Image showing the damage</string>
    <string name="manifest_activity_title_damage_claim_image">Image of the damage</string>
    <string name="report_damage_button_report_new_damage">Report a new damage</string>
    <string name="report_damage_textview_previously_reported_damages">Previously reported damages</string>
    <string name="report_damage_textview_reporting_damage">New damages</string>
    <string name="report_damage_menu_title">Options:</string>
    <string name="report_damage_menu_item_delete">Delete</string>
    <string name="reportnewdamage_textview_damageimages">Damage Images</string>
    <string name="reportdamage_textview_empty">List is empty</string>
    <string name="dialog_title">Select an option:</string>
    <string name="activity_title_damageinfo">Damage claim information</string>
    <string name="homepage_button_reset">Reset</string>
    <string name="homepage_button_submit">No new damages</string>   
    <string name="login_pd">Logging in</string>
    <string name="damages">Report new damage</string>
    <string name="submit_survey">Survey successfully submitted</string>
    <string name="reportnewdamage_textview_damagecaused">Caused by:</string>
    <string name="damage_caused_by">Damage caused by:</string>
    <string name="loading">Loading</string>
    <string name="logout">Logout</string>
    <string name="networkunavailable">Network Error. Please check if your network is available and try again later!</string>
    <string name="surveyticketby">Survey ticket by:</string>
    <string name="damagereportby">Damage report by:</string>
    <string name="driver">Driver</string>
    <string name="other">Other</string>
    <string name="problem">There is some problem with the server. Please report this to developers..</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="selectid">Please select ID before reporting a damage</string>    
    <string name="unclaimeddamages">Unclaimed damages will not be saved. Are you sure you want to exit?</string>
	
    
    
    
    <string name="oldpassword">Old password</string>
    <string name="newpassword">New password</string>
    <string name="confirmnewpassword">Confirm new password</string>
    <string name="resetpassword">Reset Password</string>
    <string name="selecttype">Please select a damage type.</string>
    <string name="errorreporting">Could not submit some of the damage claims. Please try again.</string>
    <string name="cancel">Cancel</string>
    <string name="invalidlogin">Could not verify your identity. Please note that you\'ve to open this app from the link given to you via text/mail for the first time. If you\'ve already done so, please contact your company.</string>
    <string name="close">Close</string>
    <string name="validemail">Enter a valid email id</string>
    <string name="sdcard">There is a problem. Please insert the SD card and check again.</string>
    <string name="damagessubmitted">Damage reported successfully</string>
    <string name="noimages">No images for this damage</string>
    
        
    <string name="changepassword">Change\npassword</string>
    <string name="changepassword1">Change password</string>
    <string name="reportdamageproblem">There seems to be a problem.\nDo you want to try again?</string>
    <string name="enterfields">Please enter all fields</string>
    
    <string name="fieldsempty">Some fields are empty</string>
    <string name="oldpwrong">The old password is wrong</string>
    <string name="newpwrong">New password fields do not match. Please re-enter the new password properly.</string>
    <string name="changepwdsuccess">Your password is changed. Please login again</string>
    <string name="resetpwdsuccess">Your new password will be be sent to your email address shortly. Please login with your new password.</string>
    
    <string name="loginfieldempty">Either the username or password is empty.</string>
    <string name="submit_new_damages">Approve damage report</string>
    <string name="submit_check_message">Are you sure you want to send this damage report for control</string>
    <string name="submit">Submit</string>
    
    
    
    
    <!-- Drawable Values -->

    <color name="app_theme">#F3F3F3</color>

    <drawable name="all_textviews">#6E6E6E</drawable>
    <drawable name="all_screens">#F3F3F3</drawable>

</resources>