<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_screens" >

    <RelativeLayout
        android:id="@+id/reportnewdamage_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_screens"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/reportnewdamage_textview_damagedetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/report_new_damage_textview_damagedetails"
            android:textColor="#6E6E6E"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reportnewdamage_textview_damagedetails"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/reportnewdamage_textview_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportnewdamage_textview_damagedetails"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/arrow_left_gif"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/reportnewdamage_textview_type"
            android:textColor="@drawable/all_textviews"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reportnewdamage_textview_type"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/reportnewdamage_textview_position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportnewdamage_textview_type"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/arrow_left_gif"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/reportnewdamage_textview_position"
            android:textColor="#6E6E6E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reportnewdamage_textview_position"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/reportnewdamage_textview_damagecaused"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportnewdamage_textview_position"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/arrow_left_gif"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/reportnewdamage_textview_damagecaused"
            android:textColor="#6E6E6E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reportnewdamage_textview_damagecaused"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/reportnewdamage_textview_damageimages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportnewdamage_textview_damagecaused"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/report_new_damage_textview_damageimages"
            android:textColor="#6E6E6E"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reportnewdamage_button_damageimages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportnewdamage_textview_damageimages"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/reportnewdamage_button_addnewimage"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Gallery
            android:id="@+id/reportnewdamage_listview_damageimages"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_below="@id/reportnewdamage_button_damageimages"
            android:layout_marginTop="10dp"
            android:scrollbarFadeDuration="0"
            android:scrollbars="horizontal" />

        <Button
            android:id="@+id/reportnewdamage_button_done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportnewdamage_listview_damageimages"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_style"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/reportnewdamage_button_done"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>