<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportdamage_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_screens" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/report_damage_button_report_new_damage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@drawable/button_style"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/report_damage_button_report_new_damage"
            android:textSize="20sp"
            android:textStyle="bold" >

            <requestFocus />
        </Button>

        <TextView
            android:id="@+id/report_damage_textview_reporting_damage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:text="@string/report_damage_textview_reporting_damage"
            android:textColor="@drawable/all_textviews"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/report_damage_listview_reporting_damage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:scrollbars="none" />

        <View
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/report_damage_button_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@drawable/button_style"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/submit_new_damages"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:text="@string/report_damage_textview_previously_reported_damages"
            android:textColor="@drawable/all_textviews"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/report_damage_listview_previously_reported_damages"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:scrollbars="none" />
    </LinearLayout>

</ScrollView>